text-align fixed

--- a/frontend/src/pages/RecipeDetails/RecipeDetails.scss
+++ b/frontend/src/pages/RecipeDetails/RecipeDetails.scss
@@ -1,147 +1,147 @@
 @import "../../styles/styles.scss";
 
 .recipe-details-wrapper {
-    text-align: center;
+  text-align: center;
 }
 
 #recipe-details-container {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    justify-content: space-evenly;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: space-evenly;
 }
 
 .recipe-details-left {
-    width: 40%;
-    margin: 5rem 3rem 0 3rem;
+  width: 40%;
+  margin: 5rem 3rem 0 3rem;
 }
 
 .recipe-details-img {
-    width: 100%;
-    padding: 2rem 1rem;
-    text-align: center;
-    background-color: $primary-color;
-    border-radius: 12px;
-    margin-bottom: 3rem;
+  width: 100%;
+  padding: 2rem 1rem;
+  text-align: center;
+  background-color: $primary-color;
+  border-radius: 12px;
+  margin-bottom: 3rem;
 }
 
 .recipe-details-img img {
-    width: 95%;
-    border-radius: 12px;
+  width: 95%;
+  border-radius: 12px;
 }
 
 .recipe-details-ingredients > h2 {
-    color: $primary-color;
-    width: 100%;
+  color: $primary-color;
+  width: 100%;
 }
 
 .recipe-details-ingredients {
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    gap: 1rem;
-    margin: 4rem 0;
-    text-align: justify;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  gap: 1rem;
+  margin: 4rem 0;
+  text-align: justify;
 }
 
 .recipe-details-ingredient {
-    padding: 0.5rem 1rem;
-    color: $secondary-color;
-    background-color: $primary-color;
-    font-size: 1.2rem;
-    width: fit-content;
-    border-radius: 20px;
+  padding: 0.5rem 1rem;
+  color: $secondary-color;
+  background-color: $primary-color;
+  font-size: 1.2rem;
+  width: fit-content;
+  border-radius: 20px;
 }
 
 .recipe-details-right {
-    width: 40%;
-    margin: 2rem 3rem;
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
+  width: 40%;
+  margin: 2rem 3rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
 
 .recipe-details-title {
-    color: $primary-color;
-    margin: 4rem 3rem 0 3rem;
+  color: $primary-color;
+  margin: 4rem 3rem 0 3rem;
 }
 
 .recipe-details-measurements > h2 {
-    color: $primary-color;
+  color: $primary-color;
 }
 
 .recipe-details-measurement {
-    list-style-type: disc;
-    margin-left: 1rem;
+  list-style-type: disc;
+  margin-left: 1rem;
 }
 
 .recipe-details-measurement > li {
-    justify-content: flex-start;
+  justify-content: flex-start;
+  text-align: start;
 }
 
 .recipe-details-measurement > li::before {
-    content: "•";
-    color: $primary-color;
-    font-weight: bold;
-    font-size: 1.2rem;
-    text-align: start;
-    margin-right: 1rem;
+  content: "•";
+  color: $primary-color;
+  font-weight: bold;
+  font-size: 1.2rem;
+  text-align: start;
+  margin-right: 1rem;
 }
 
 .recipe-details-steps > h2 {
-    color: $primary-color;
+  color: $primary-color;
 }
 
 .recipe-details-steps {
-    display: flex;
-    flex-direction: column;
-    gap: 0.8rem;
-    border-top: 3px solid $primary-color;
-    padding-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
+  border-top: 3px solid $primary-color;
+  padding-top: 2rem;
 }
 
 .recipe-details-step {
-    display: flex;
-    text-align: start;
+  display: flex;
+  text-align: start;
 }
 
 .recipe-details-number {
-    color: $primary-color;
-    font-size: 1.5rem;
-    font-weight: 600;
-    margin-right: 1rem;
-    position: relative;
-    top: -6px;
+  color: $primary-color;
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin-right: 1rem;
+  position: relative;
+  top: -6px;
 }
 
 @media screen and (max-width: 992px) {
-    #recipe-details-container {
-        flex-direction: column;
-        align-items: center;
-    }
+  #recipe-details-container {
+    flex-direction: column;
+    align-items: center;
+  }
 
-    .recipe-details-left {
-        width: 90%;
-    }
+  .recipe-details-left {
+    width: 90%;
+  }
 
-    .recipe-details-right {
-        width: 90%;
-    }
+  .recipe-details-right {
+    width: 90%;
+  }
 }
 
 @media screen and (max-width: 480px) {
-    .recipe-details-ingredients {
-        flex-direction: column;
-        align-items: center;
-    }
+  .recipe-details-ingredients {
+    flex-direction: column;
+    align-items: center;
+  }
 
-    .recipe-details-img {
-        padding: 0;
-        background-color: transparent;
-    }
+  .recipe-details-img {
+    padding: 0;
+    background-color: transparent;
+  }
 
-    .recipe-details-img img {
-        width: 90%;
-    }
-
+  .recipe-details-img img {
+    width: 90%;
+  }
 }
